Tue Aug 26 09:07:57 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py: Remove a bit of debugging code which
	  broke backwards compatibility.

Tue Aug 26 08:35:07 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py,
	  xappy/doctests/indexerconnection_doctest1.txt,
	  xappy/doctests/indexerconnection_doctest2.txt,
	  xappy/doctests/indexerconnection_doctest3.txt,xappy/,
	  xappy/unittests/field_associations.py: Extend Field data
	  structure with a new member (and optional constructor parameter)
	  to store "associated" data.  This data will be returned in the
	  document data field instead of the original data, and is intended
	  to allow particular return data to be associated with a piece of
	  input data.  Documentation and examples still needed.  Also, add
	  new method to SearchResult to return a list of relevant fields,
	  and the corresponding piece of data for them.

Wed Aug 20 16:14:06 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Ensure that _next_docid is initialised
	  so that searches on empty databases with no configuration don't
	  fail.
	* xappy/unittests/emptydb_search.py: Add regression test for this
	  problem.

Wed Aug 20 12:31:38 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* build.py,setup.py,test.py,xappy/,xappy/unittests/: Remove
	  trailing whitespace.

Wed Aug 13 16:20:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Change get_terms_for_field() to
	  iter_terms_for_field() (and make it iterate the terms, rather
	  than returning them in a list, too).
	* xappy/unittests/get_terms_for_field.py,
	  xappy/unittests/terms_for_field.py: Rename get_terms_for_field.py
	  to terms_for_field.py and expand it a bit.

Wed Aug 13 15:46:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py: Add support for prefixes longer than