@@ -1,3 +1,10 @@
+Tue Aug 26 16:59:54 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/fieldactions.py: Fix generation of field associations for
+	  EXACT and FACET fields - was forgetting to add the term prefix.
+	* xappy/searchconnection.py: Avoid returning relevant data items
+	  more than once.
+
 Tue Aug 26 09:07:57 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/datastructures.py: Remove a bit of debugging code which
